Fixed bugs with scrollbar visibility.

--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -17,37 +17,3 @@
         width: $cont-width-lg;
     }
 }
-
-.content {
-    // Keep content above sidebar.
-    position: relative;
-    background-color: $white;
-    z-index: 2;
-
-    // Animate transform.
-    transition: transform 0.5s ease;
-
-    // Move page contents to make room for sidebar.
-    &.active {
-        transform: translateX(-275px);
-
-        @include mq_min(medium) {
-            transform: translateX(-350px);
-          }
-    }
-}
-
-.content_wrapper {
-    overflow-x: hidden; // Hide horizontal scroll bar.
-}
-
-// Dim page contents.
-.content_overlay {
-    display: none;
-    @extend %fill-container;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0,0,0,0.4);
-    z-index: 100;
-    cursor: pointer;
-}
